<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_shop"
        android:icon="@drawable/baseline_shop_24"
        android:title="@string/title_shop" />

    <item
        android:id="@+id/navigation_cart"
        android:icon="@drawable/baseline_shopping_cart_24"
        android:title="@string/title_cart" />

    <item
        android:id="@+id/navigation_inbox"
        android:icon="@drawable/baseline_drafts_24"
        android:title="@string/title_inbox" />

    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/baseline_settings_black_24"
        android:title="@string/title_settings" />

</menu>
